contact manager app v1

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Kanit&family=Lobster&family=Rubik+80s+Fade&display=swap');
+
+/* h1 {
+    font-family: 'Rubik 80s Fade', cursive
+} */
+.contact_image{
+    width: 130px;
+    
+}
