--- a/src/app/add-contact/add-contact.component.html
+++ b/src/app/add-contact/add-contact.component.html
@@ -18,47 +18,50 @@
         </div>
     </div>
     <!-- <pre>
-        {{contactname}}
+        {{contact | json}}
     </pre> -->
 
     <!-- add contact form -->
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <form class="border p-3 rounded" >
+            <div class="col-md-6">
+                <form class="border p-3 rounded mb-5" >
                     <div class="mb-2">
-                        <input name="contactname" [(ngModel)]="contactname" type="text" class="form-control" placeholder="name">
+                        <input name="id" [(ngModel)]="contact.id" type="text" class="form-control" placeholder="contact id">
                     </div>
                     <div class="mb-2">
-                        <input type="text" class="form-control" placeholder="photo url">
+                        <input name="contactname" [(ngModel)]="contact.name" type="text" class="form-control" placeholder="name">
                     </div>
                     <div class="mb-2">
-                        <input type="text" class="form-control" placeholder="Email">
+                        <input name="photo" [(ngModel)]="contact.photo" type="text" class="form-control" placeholder="photo url">
                     </div>
                     <div class="mb-2">
-                        <input type="text" class="form-control" placeholder="Mobile Number">
+                        <input name="email" [(ngModel)]="contact.email" type="text" class="form-control" placeholder="Email">
                     </div>
                     <div class="mb-2">
-                        <input type="text" class="form-control" placeholder="Company">
+                        <input name="mobile" [(ngModel)]="contact.mobile" type="text" class="form-control" placeholder="Mobile Number">
                     </div>
                     <div class="mb-2">
-                        <input type="text" class="form-control" placeholder="Title">
+                        <input name="company" [(ngModel)]="contact.company" type="text" class="form-control" placeholder="Company">
                     </div>
                     <div class="mb-2">
-                        <select name="" id="" class="form-control">
+                        <input name="title" [(ngModel)]="contact.title" type="text" class="form-control" placeholder="Title">
+                    </div>
+                    <div class="mb-2">
+                        <select name="groupId" [(ngModel)]="contact.groupId" id="" class="form-control">
                             <option value="" selected hidden disabled>select a group</option>
                             <option value="{{group.id}}" *ngFor="let group of allGroups">{{group.name}}</option>
                             
                         </select>
                     </div>
                     <div class="mb-2">
-                        <input (click)="addcontact" type="button" class="btn btn-success" value="create">
+                        <input (click)="addcontact()" type="button" class="btn btn-success" value="create">
                         <a routerLink="/" class="btn btn-warning ms-3">Close</a>
                     </div>
                 </form>
             </div>
             <div class="col-md-4">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgBhcplevwUKGRs1P-Ps8Mwf2wOwnW_R_JIA&usqp=CAU" alt="" class="contact_image mt-2">
+                <img [src]="contact.photo" alt="no image" class="contact_image mt-5">
 
             </div>
         </div>
