--- a/src/app/contactmanager/contactmanager.component.html
+++ b/src/app/contactmanager/contactmanager.component.html
@@ -61,7 +61,7 @@
                                                 <a routerLink="/contacts/edit/:contactId" class="btn btn-success mt-1">
                                                     <i class="fa-solid fa-pen"></i>
                                                 </a>
-                                                    <button class="btn btn-danger mt-1">
+                                                    <button (click)="" class="btn btn-danger mt-1">
                                                         <i class="fa-solid fa-trash"></i>
                                                     </button>
                                             </div>
