--- a/src/app/view-contact/view-contact.component.html
+++ b/src/app/view-contact/view-contact.component.html
@@ -2,7 +2,7 @@
     <div class="row ">
         <div class="col">
             <h1>
-                <i class="fa-solid fa-user-eye"></i> &nbsp;
+                <i class="fa-solid fa-eye"></i> &nbsp;
                 View Contact Page
             </h1>
 
