--- a/src/app/contactmanager/contactmanager.component.html
+++ b/src/app/contactmanager/contactmanager.component.html
@@ -58,10 +58,10 @@
                                                 <a routerLink="/contacts/view/{{contacts.id}}" class="btn btn-warning">
                                                     <i class="fa-solid fa-eye"></i>
                                                 </a>
-                                                <a routerLink="/contacts/edit/:contactId" class="btn btn-success mt-1">
+                                                <a routerLink="/contacts/edit/{{contacts.id}}" class="btn btn-success mt-1">
                                                     <i class="fa-solid fa-pen"></i>
                                                 </a>
-                                                    <button (click)="" class="btn btn-danger mt-1">
+                                                    <button (click)="deleteContact(contacts.id)" class="btn btn-danger mt-1">
                                                         <i class="fa-solid fa-trash"></i>
                                                     </button>
                                             </div>
